<resources>
    <string name="app_name">Blood Donation</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Blood Donation</string>
    <string name="nav_header_subtitle">ASAS,KOCHI</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Enroll Student</string>
    <string name="menu_gallery">Search by Id/name</string>
    <string name="menu_slideshow">Student Donor Registration</string>
    <string name="menu_tools">Search Students</string>
    <string name="menu_report">Report</string>
    <string name="menu_update">Update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
